examples/test/testpolicy3514.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3514
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key19: value4
      key4: value12
      key47: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value11
          key25: value6
      podSelector:
        matchLabels:
          key15: value24
          key20: value24
          key40: value25
